Cors for registration added